Fix: Adjust alignment of icons

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,6 +32,9 @@
   border-radius: 5px;
   background-color: var(--darkerGray);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.775);
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
 
 .navContainer > :global(a.active) {
